# STM32H7-PLC-Validation

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  FUNCTIONAL_VALIDATION.ioc  arm-none-eabi-gcc.cmake
Core/Inc/: ADS8688_Interface.h  BSP_PLC.h  DAC81408_interface.h  analog_input.h  analog_output.h  main.h  process_image.h
Core/Inc/BSP_subsystem/: diagnostics.h
Core/Inc/analog_subsystem/: analog_input.h
Core/Inc/digital_subsystem/: current_limiter.h  iso8200aq_target_config.h
Core/Src/: ADS8688_Interface.c  BSP_PLC.c  DAC81408_Interface.c  analog_input.c  analog_output.c  gpio.c  iso8200aq_board.c  main.c  spi.c
Core/Src/BSP_subsystem/: process_image.c
Core/Src/analog_subsystem/: ADS8688_Interface.c  analog_input.c
Drivers/Middleware/ADS8688/: ADS8688.c  ADS8688.h
Drivers/Middleware/CLT01_38SQ7/: clt01_38sq7.c  clt01_38sq7.h  clt01_38sq7_cfg.h  clt01_38sq7_private.h
Drivers/Middleware/Common/: current_limiter.c
Drivers/Middleware/DAC81408/: dac81408.c  dac81408.h
Drivers/Middleware/ISO8200AQ/: iso8200aq.c  iso8200aq.h  output_driver.c  output_driver.h
